<resources>
    <string name="app_name">TecnoPro</string>
    <string name="initial_message">Tecnologia a tu alcance</string>
    <string name="logo">Logo</string>
    <string name="description_message">Explora un mundo de posiblidades con las mejores tecnologias.</string>
    <string name="comienza">Comienza</string>
    <string name="correo_electronico">Enter email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_products">search_products</string>
    <string name="view_cart">view_cart</string>
    <string name="products">Products</string>
    <string name="smartphone">Smartphone</string>
    <string name="airpod">airpod</string>
    <string name="enjoy_premium_sound_and_freedom_with_apple_airpods_designed_for_all_day_comfort">Enjoy premium sound and freedom with Apple AirPods, designed for all-day comfort.</string>
    <string name="Airpod">Airpod</string>
    <string name="game">Game</string>
    <string name="viewCart">view cart</string>
    <string name="smart_wash">Smart Wash</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="details_to_register">Fill in the details to register</string>
    <string name="register">Register</string>
    <string name="already_account">Already have an account</string>
    <string name="recover_password">Recover Password</string>
    <string name="text_new_password">Enter your email to rececive a new password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="message_email">We will send the new password to the registered email.</string>
    <string name="send_email">Send email</string>
    <string name="car">Car</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="back">Back</string>
    <string name="tecnopro">tecnopro</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="detalles_del_producto">Detalles del producto</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="_0">$0</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="guardar_producto">Guardar producto</string>
    <string name="secci_n_de_administraci_n">Sección de Administración</string>
    <string name="ver_pedidos_atendidos">Ver pedidos atendidos</string>
    <string name="ver_pedidos_sin_atender">Ver pedidos sin atender</string>
    <string name="desde_aqu_puedes_gestionar_productos_usuarios_y_pedidos_realizados_por_los_clientes">Desde aquí puedes gestionar productos, usuarios y pedidos realizados por los clientes.</string>
    <string name="ver_lista_de_usuarios_registrados">Ver lista de usuarios registrados</string>
    <string name="quantity_2_price_15">Quantity:2 Price: $15</string>
    <string name="registrarse">Registrarse</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="inicio_de_sesion_alternativo">inicio de sesion alternativo</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="no_has_realizado_ning_n_pedido">No has realizado ningún pedido.</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="usuario">Usuario</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad:</string>
    <string name="carrito_de_compras">Carrito de compras</string>
    <string name="total_0">Total: $0</string>
    <string name="realizar_pedido">Realizar pedido</string>
    <string name="lista_de_pedidos">Lista de pedidos</string>
    <string name="no_hay_pedidos_para_mostrar">No hay pedidos para mostrar.</string>
    <string name="usuarios_registrados">Usuarios Registrados</string>
    <string name="no_hay_usuarios_registrados">No hay usuarios registrados.</string>
    <string name="user_example_com">user@example.com</string>
    <string name="_1">1</string>
    <string name="_mas">+</string>
    <string name="_menos">-</string>
    <string name="precio_total">Precio total</string>
    <string name="id_del_pedido">ID del Pedido</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="correo_del_usuario">Correo del usuario</string>
    <string name="productos">Productos: ...</string>
    <string name="estado_pendiente">Estado: Pendiente</string>
    <string name="atender_pedido">Atender pedido</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="administrador">Administrador</string>

    <string name="bogota">Bogota</string>
    <string name="cali">Cali</string>
    <string name="villavicencio">Villavicencio</string>
    <string name="guajira">Guajira</string>
    <string name="tiendas">Tiendas</string>

    <string name="default_web_client_id" translatable="false">739440269703-3626cd1le2pd4r9oo0mdpm95rsd6shmg.apps.googleusercontent.com</string>

</resources>
