<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPedidoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_del_pedido"
            android:fontFamily="@font/mono_bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_usuario"
            android:fontFamily="@font/mono_bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtEmailUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo_del_usuario"
            android:fontFamily="@font/mono_bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtTotalPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_0"
            android:fontFamily="@font/mono_bold"
            android:textColor="@color/main_color"
            android:textStyle="bold"
            android:paddingTop="4dp" />

        <TextView
            android:id="@+id/txtProductosPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productos"
            android:fontFamily="@font/mono_bold"
            android:paddingTop="4dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtEstadoPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mono_bold"
            android:text="@string/estado_pendiente"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:paddingTop="4dp"/>


        <Button
            android:id="@+id/btnAtenderPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/atender_pedido"
            android:backgroundTint="@color/main_color"
            android:textColor="@android:color/white"
            android:fontFamily="@font/mono_bold"
            android:visibility="gone" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
