<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    android:gravity="start">

    <TextView
        android:id="@+id/text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mono_semibold"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_to_register"
        android:textSize="15sp"
        android:fontFamily="@font/mono_semibold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/edt_full_name"
        style="@style/EditTextRounded"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:hint="@string/enter_full_name"
        android:fontFamily="@font/mono_semibold"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_email_register"
        style="@style/EditTextRounded"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_email"
        android:fontFamily="@font/mono_semibold"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_password_register"
        style="@style/EditTextRounded"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:fontFamily="@font/mono_semibold"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_password_confirm"
        style="@style/EditTextRounded"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:fontFamily="@font/mono_semibold"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:fontFamily="@font/mono_semibold"
        android:backgroundTint="@color/main_color"
        app:cornerRadius="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textSize="15sp"
            android:fontFamily="@font/mono_semibold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            android:textSize="15sp"
            android:fontFamily="@font/mono_semibold"
            android:textColor="@color/design_default_color_primary"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground" />
    </LinearLayout>

</LinearLayout>