<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    android:gravity="start">

    <TextView
        android:id="@+id/text_recover_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mono_bold"
        android:text="@string/recover_password"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text_details"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mono_bold"
        android:text="@string/text_new_password"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/edt_full_name"
        style="@style/EditTextRounded"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:hint="@string/enter_your_email"
        android:fontFamily="@font/mono_bold"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mono_bold"
        android:text="@string/message_email"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/send_email"
        android:textSize="18sp"
        android:fontFamily="@font/mono_bold"
        android:backgroundTint="@color/main_color"
        app:cornerRadius="12dp" />


</LinearLayout>