<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:paddingTop="56dp">

    <EditText
        android:id="@+id/edt_email_login"
        style="@style/EditTextRounded"
        android:layout_width="373dp"
        android:layout_height="47dp"
        android:hint="@string/correo_electronico"
        android:textColor="@color/black"
        android:fontFamily="@font/mono_semibold"
        android:textSize="15sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/edt_email_password"
        style="@style/EditTextRounded"
        android:layout_width="373dp"
        android:layout_height="47dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:fontFamily="@font/mono_semibold"
        android:textSize="15sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="373dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/mono_semibold"
        android:text="@string/login"
        android:textSize="18sp"
        app:cornerRadius="12dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="190dp"
            android:layout_height="52dp"
            android:backgroundTint="@color/main_color"
            android:fontFamily="@font/mono_semibold"
            android:text="@string/forgot_password"
            android:textAlignment="viewStart"
            android:textSize="15sp"
            app:cornerRadius="12dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="176dp"
            android:layout_height="52dp"
            android:backgroundTint="@color/main_color"
            android:fontFamily="@font/mono_semibold"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="15sp"
            app:cornerRadius="12dp" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_sign_in_google"
        android:layout_width="266dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in_with_google"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        app:icon="@drawable/logo_google"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:strokeColor="@color/darkgray"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/bnt_inicio_sesion_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="inicio de sesion alternativo" />

</LinearLayout>
