<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/Superior_nav_container"
        android:name="com.example.proyecto_nativas.fragments.SuperiorNavFragment"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_bogota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color"
            android:text="@string/bogota" />

        <Button
            android:id="@+id/btn_cali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color"
            android:text="@string/cali" />

        <Button
            android:id="@+id/btn_guajira"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color"
            android:text="@string/guajira" />


    </LinearLayout>

    <fragment
        android:id="@+id/maps"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/bottom_nav_container"
        android:name="com.example.proyecto_nativas.fragments.BottomNavFragment"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

</LinearLayout>
