<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Activities.ProfileActivity">

    <TextView
        android:id="@+id/tvTituloPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/main_color"
        android:fontFamily="@font/mono_bold"
        android:text="@string/mi_perfil"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Superior_nav_container" />

    <ImageView
        android:id="@+id/imgFotoPerfil"
        android:layout_width="224dp"
        android:layout_height="191dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloPerfil" />

    <TextView
        android:id="@+id/txtNombrePerfil"
        android:layout_width="204dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mono_bold"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFotoPerfil" />

    <TextView
        android:id="@+id/txtCorreoPerfil"
        android:layout_width="267dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mono_bold"
        android:text="@string/correo"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtUsuarioPerfil"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mono_bold"
        android:text="@string/usuario"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoPerfil" />

    <TextView
        android:id="@+id/txtApellidoPerfil"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:fontFamily="@font/mono_bold"
        android:lineSpacingExtra="16sp"
        android:text="@string/apellido"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombrePerfil" />


    <Button
        android:id="@+id/btnEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/mono_bold"
        android:text="@string/editar_perfil"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoPerfil" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/Superior_nav_container"
        android:name="com.example.proyecto_nativas.fragments.SuperiorNavFragment"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="354dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuarioPerfil">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="183dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/mono_bold"
            android:text="@string/edad"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtEdadPerfil"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/mono_bold"
            android:text="@string/edad"
            android:textAlignment="textStart"
            android:textStyle="bold" />

    </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/bottom_nav_container"
            android:name="com.example.proyecto_nativas.fragments.BottomNavFragment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
