<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <EditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Correo electrónico"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/mono_bold"/>

    <EditText
        android:id="@+id/edtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Contraseña"
        android:fontFamily="@font/mono_bold"
        android:inputType="textPassword"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/mono_bold"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_registrarse_Alt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/mono_bold"
        android:text="@string/registrarse" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_sign_in_google"
        android:layout_width="266dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in_with_google"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        app:icon="@drawable/logo_google"

        app:iconSize="30dp"
        app:iconTint="@null"
        app:strokeColor="@color/main_color"
        app:strokeWidth="2dp" />
</LinearLayout>
